stop dates wrapping in proposal tables

--- a/jekyll/css/site_overrides.css
+++ b/jekyll/css/site_overrides.css
@@ -108,3 +108,7 @@ blockquote ul li {
     font-size: smaller;
     cursor: pointer;
 }
+
+div#tables-of-tracked-proposals td:nth-of-type(2), td:nth-of-type(3) {
+    white-space: nowrap;
+}
